[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "channels-yroom"
description = 'Yjs sync protocol server for Django channels'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Stefan Wehrmeyer", email = "mail@stefanwehrmeyer.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Django >= 3.2",
  "channels >= 4.0",
  "yroom >= 0.0.2",
  "django-appconf",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "async-timeout",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-django",
  "daphne",
]

[project.urls]
Documentation = "https://github.com/stefanw/channels-yroom#readme"
Issues = "https://github.com/stefanw/channels-yroom/issues"
Source = "https://github.com/stefanw/channels-yroom"

[tool.hatch.version]
path = "channels_yroom/__about__.py"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=channels_yroom --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "channels_yroom/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
