[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "channels-yroom"
description = 'Yjs sync protocol server for Django channels'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Stefan Wehrmeyer", email = "mail@stefanwehrmeyer.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Django >= 3.2",
  "channels >= 4.0",
  "yroom >= 0.0.2",
  "django-appconf",
]
dynamic = ["version"]

[tool.hatch.envs.test]
dependencies = [
  "async-timeout",
  "daphne",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-django",
  "pytest",
]

[tool.hatch.envs.lint]
skip-install = true
detached = true
dependencies = [
  "black",
  "isort",
  "flake8",
  "Flake8-pyproject",
]

[tool.hatch.envs.lint.scripts]
check = [
  "flake8 channels_yroom tests",
  "black --check --diff channels_yroom tests",
  "isort --check-only --diff channels_yroom tests",
]

[project.urls]
Documentation = "https://github.com/stefanw/channels-yroom#readme"
Issues = "https://github.com/stefanw/channels-yroom/issues"
Source = "https://github.com/stefanw/channels-yroom"

[tool.hatch.version]
path = "channels_yroom/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["channels_yroom"]

[tool.hatch.envs.test.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=channels_yroom --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "channels_yroom/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.flake8]
extend-ignore = ['E203']
max-line-length = 88

[tool.isort]
profile = 'black'
