[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "channels-yroom"
description = 'Yjs sync protocol server for Django channels'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Stefan Wehrmeyer", email = "mail@stefanwehrmeyer.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Django >= 3.2",
  "channels >= 4.0",
  "yroom >= 0.0.6",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/stefanw/channels-yroom#readme"
Issues = "https://github.com/stefanw/channels-yroom/issues"
Source = "https://github.com/stefanw/channels-yroom"

[tool.hatch.version]
path = "channels_yroom/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["channels_yroom"]

[tool.hatch.envs.test]
dependencies = [
  "async-timeout",
  "daphne",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-django",
  "pytest",
  "y-py",
]

[tool.hatch.envs.test.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=channels_yroom --cov=tests {args}"
no-cov = "test --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.docs]
skip-install = true
detached = true
dependencies = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-mermaid2-plugin",
]
[tool.hatch.envs.docs.scripts]
serve = [
  "mkdocs serve -a 127.0.0.1:8001",
]
freeze = [
  "pip freeze > docs/requirements.txt",
]

[tool.hatch.envs.lint]
skip-install = true
detached = true
dependencies = [
  "black",
  "ruff",
]

[tool.hatch.envs.lint.scripts]
check = [
  "ruff channels_yroom tests",
  "black --check --diff channels_yroom tests",
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "channels_yroom/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
